--- a/style.css
+++ b/style.css
@@ -2,9 +2,46 @@
   box-sizing: border-box;
 }
 
+/* Basic body element styling */
+
 body {
   padding: 0;
   margin: 0;
   height: 100vh;
   font-family: "Roboto", sans-serif;
+}
+
+/* Nav Styling */
+
+nav {
+  background-color: #1f2937;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 300px;
+}
+
+.headerlogo {
+  color: #f9faf8;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+ul {
+  display: flex;
+  gap: 20px;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  font-size: 18px;
+  font-style: italic;
+  font-weight: 300;
+  color: #e5e7eb;
 }
