--- a/style.css
+++ b/style.css
@@ -98,3 +98,19 @@ header {
   width: 600px;
   height: 250px;
 }
+
+/* Information Section */
+
+h2 {
+  font-size: 36px;
+  font-weight: 700;
+  color: #1f2937;
+  text-align: center;
+}
+
+.info-img {
+  width: 150px;
+  height: 150px;
+  border: 5px solid #3882f6;
+  border-radius: 20px;
+}
