--- a/style.css
+++ b/style.css
@@ -129,3 +129,23 @@ h2 {
   flex-wrap: wrap;
   text-align: center;
 }
+
+/* Quote Section */
+
+.quote {
+  background-color: #e5e7eb;
+  padding: 50px 500px;
+}
+
+.quote-text {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+  color: #1f2937;
+}
+
+.signature {
+  text-align: end;
+  font-size: 24px;
+  font-weight: 700;
+}
